--- a/MilestoneJS/style.css
+++ b/MilestoneJS/style.css
@@ -1,5 +1,3 @@
-* { border: 1px solid black; }
-
 body {
     font-family: 'Courier New', Courier, monospace;
     text-align: center;
@@ -7,6 +5,11 @@ body {
 
 hr {
     width: 500px;
+}
+
+#mistake {
+    color: red;
+
 }
 
 #board {
@@ -42,10 +45,10 @@ hr {
 }
 
 .number {
-    width: 48px;
-    height: 48px;
-    /* grid border lightgray */
-    /* border: 1px solid black; */
+    width: 44px;
+    height: 44px;
+    border: 1px solid black;
+    margin: 2px;
 
     /* Text */
     font-size: 20px;
