--- a/MilestoneJS/style.css
+++ b/MilestoneJS/style.css
@@ -77,3 +77,24 @@ body {
   .vertical-line {
     border-right: 1px solid black;
   }
+
+
+  .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+}
+
+.prompt-box {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+}
